[odss.http.] Imprive types, names and add simple CSRF

--- a/odss.http.common/pyproject.toml
+++ b/odss.http.common/pyproject.toml
@@ -10,6 +10,8 @@ readme = "README.md"
 license = {text = "MIT"}
 dependencies = [
     "ujson>=5.8.0",
+    "yarl>=1.9.2",
+    "multidict>=6.0.4",
 ]
 
 [build-system]
